<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Yaroslav Mytkalyk

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>

    <string name="app_name">Painless Music Player</string>

    <string name="Music_library_needs_permission_to_access_media">Music library needs permission to
        access media
    </string>

    <string name="Improve_automatic_switching_between_Day_and_Night_">Improve automatic switching
        between Day and Night theme by allowing this app to access your approximate location
    </string>

    <string name="Allow">Allow</string>
    <string name="Later">Later</string>
    <string name="Settings">Settings</string>

    <string name="Request">Request</string>
    <string name="Theme">Theme</string>
    <string name="Day_Night">Day-Night</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>

    <string name="Scrobbling">Scrobbling</string>
    <string name="Send_playback_details_to_Lastfm_Scrobbler">Send playback details to Last.fm
        Scrobbler
    </string>

    <string name="No_tracks_found">No tracks found</string>
    <string name="No_artists_found">No artists found</string>
    <string name="No_albums_found">No albums found</string>
    <string name="No_genres_found">No genres found</string>
    <string name="No_media_found_for_s">No media found for “%1$s”</string>
    <string name="No_media_found">No media found</string>

    <string name="No_albums_here">No albums here</string>

    <string name="Failed_to_load_data_s">Failed to load data: %1$s</string>
    <string name="Failed_connecting_to_Media_Store">Failed connecting to Media Store</string>
    <string name="Filter">Filter</string>

    <string name="Untitled">Untitled</string>

    <string name="Failed_to_start_playback">Failed to start playback</string>
    <string name="Bass_Boost">Bass Boost</string>
    <string name="Equalizer">Equalizer</string>

    <string name="d_Hz">%1$d Hz</string>
    <string name="s_kHz">%1$s kHz</string>
    <string name="Effects">Effects</string>

    <string name="s_removed_from_queue">“%1$s” removed from queue</string>
    <string name="Delete">Delete</string>

    <string name="Are_you_sure_you_want_to_permanently_delete_s">Are you sure you want to
        permanently delete “%1$s”?
    </string>

    <string name="Cancel">Cancel</string>
    <string name="Recently_added">Recently added</string>
    <string name="Recently_played_albums">Recently played albums</string>
    <string name="Random_playlist">Random playlist</string>

    <string name="You_played_no_albums_yet">You played no albums yet</string>

    <plurals name="d_albums">
        <item quantity="one">%1$d album</item>
        <item quantity="other">%1$d albums</item>
    </plurals>

    <string name="Navigation_drawer">Navigation drawer</string>

    <string name="Recent_Activity">Recent Activity</string>
    <string name="Artists">Artists</string>
    <string name="Albums">Albums</string>
    <string name="Genres">Genres</string>
    <string name="Tracks">Tracks</string>
    <string name="Playlists">Playlists</string>

    <string name="Shuffle">Shuffle</string>
    <string name="Repeat">Repeat</string>

    <string name="Failed_to_delete_playlist">Failed to delete playlist</string>
    <string name="Failed_to_delete_album">Failed to delete album</string>
    <string name="Failed_to_delete_media">Failed to delete media</string>

    <string name="Media_on_removable_storage_cannot_be_deleted">Media on removable storage cannot be
        deleted
    </string>

    <string name="Menu">Menu</string>

    <string name="Previous">Previous</string>
    <string name="Next">Next</string>
    <string name="Play">Play</string>
    <string name="Pause">Pause</string>

    <string name="Unknown_artist">Unknown artist</string>
    <string name="Unknown_album">Unknown album</string>
    <string name="artist_album_separator"><![CDATA[ / ]]></string>

    <string name="Now_Playing">Now Playing</string>
    <string name="Queue">Queue</string>
    <string name="The_queue_is_empty">The queue is empty</string>

</resources>
