<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Theme"
            android:textColor="?attr/colorAccent"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/radioNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/Dark"/>

            <RadioButton
                android:id="@+id/radioDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/Light"/>

            <RadioButton
                android:id="@+id/radioDayNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/Day_Night"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Scrobbling"
            android:textColor="?attr/colorAccent"/>

        <CheckBox
            android:id="@+id/checkboxScrobble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:text="@string/Send_playback_details_to_Simple_Lastfm_Scrobbler"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>
</ScrollView>