<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Yaroslav Mytkalyk

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.doctoror.fuckoffmusicplayer.nowplaying.NowPlayingActivityModel"/>

        <import type="com.doctoror.fuckoffmusicplayer.domain.playback.RepeatMode"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="InconsistentLayout">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:fitsSystemWindows="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:colorFilter="@{@color/translucentBackgroundDimmer}"
            tools:src="@drawable/album_art_placeholder"
            tools:ignore="ContentDescription"/>

        <FrameLayout
            android:id="@+id/toolbarContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/translucentBackground"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </FrameLayout>

        <TextView
            android:id="@+id/textPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:minEms="2"
            android:textIsSelectable="false"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:formattedDuration="@{model.elapsedTime / 1000}"
            tools:text="0:00"/>

        <TextView
            android:id="@+id/textDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="end"
            android:minEms="2"
            android:textIsSelectable="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:formattedDuration="@{model.duration / 1000}"
            tools:text="0:00"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="@id/textPosition"
            app:layout_constraintEnd_toStartOf="@id/textDuration"
            app:layout_constraintBottom_toBottomOf="@+id/textDuration"
            app:layout_constraintTop_toTopOf="@+id/textDuration"
            android:max="200"
            android:progress="@{model.progress}"/>

        <com.doctoror.fuckoffmusicplayer.widget.PressFeedbackImageButton
            android:id="@+id/btnPlay"
            android:layout_width="@dimen/activity_nowplaying_play_button_size"
            android:layout_height="@dimen/activity_nowplaying_play_button_size"
            android:layout_margin="24dp"
            android:background="@drawable/color_accent_circle"
            android:contentDescription="@string/Previous"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:srcRes="@{model.btnPlayRes}"
            tools:src="@drawable/ic_play_arrow_white_36dp"/>

        <com.doctoror.fuckoffmusicplayer.widget.PressFeedbackImageButton
            android:id="@+id/btnPrev"
            android:layout_width="@dimen/activity_nowplaying_button_size"
            android:layout_height="@dimen/activity_nowplaying_button_size"
            android:layout_marginLeft="@dimen/activity_nowplaying_controls_margin"
            android:layout_marginRight="@dimen/activity_nowplaying_controls_margin"
            android:background="@drawable/grey_circle_48dp"
            android:src="@drawable/ic_fast_rewind_white_24dp"
            android:contentDescription="@string/Previous"
            app:layout_constraintEnd_toStartOf="@id/btnPlay"
            app:layout_constraintTop_toTopOf="@id/btnPlay"
            app:layout_constraintBottom_toBottomOf="@id/btnPlay"/>

        <com.doctoror.fuckoffmusicplayer.widget.PressFeedbackImageButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/activity_nowplaying_button_size"
            android:layout_height="@dimen/activity_nowplaying_button_size"
            android:layout_marginLeft="@dimen/activity_nowplaying_controls_margin"
            android:layout_marginRight="@dimen/activity_nowplaying_controls_margin"
            android:background="@drawable/grey_circle_48dp"
            android:src="@drawable/ic_fast_forward_white_24dp"
            android:contentDescription="@string/Next"
            app:layout_constraintStart_toEndOf="@id/btnPlay"
            app:layout_constraintTop_toTopOf="@id/btnPlay"
            app:layout_constraintBottom_toBottomOf="@id/btnPlay"/>

        <ImageButton
            android:id="@+id/btnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_nowplaying_controls_margin_secondary"
            android:layout_marginLeft="@dimen/activity_nowplaying_controls_margin_secondary"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Shuffle"
            app:src="@{@drawable/ic_shuffle_black_24dp}"
            app:activated="@{model.shuffleEnabled}"
            app:tintNormal="@{@android:color/white}"
            app:useActivatedSrcTint="@{true}"
            app:layout_constraintStart_toEndOf="@id/btnNext"
            app:layout_constraintTop_toTopOf="@id/btnPlay"
            app:layout_constraintBottom_toBottomOf="@id/btnPlay"
            tools:src="@drawable/ic_shuffle_black_24dp"/>

        <ImageButton
            android:id="@+id/btnRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_nowplaying_controls_margin_secondary"
            android:layout_marginRight="@dimen/activity_nowplaying_controls_margin_secondary"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Repeat"
            app:src="@{model.repeatMode == RepeatMode.TRACK ? @drawable/ic_repeat_one_black_24dp : @drawable/ic_repeat_black_24dp}"
            app:activated="@{model.repeatMode != RepeatMode.NONE}"
            app:tintNormal="@{@android:color/white}"
            app:useActivatedSrcTint="@{true}"
            app:layout_constraintEnd_toStartOf="@id/btnPrev"
            app:layout_constraintTop_toTopOf="@id/btnPlay"
            app:layout_constraintBottom_toBottomOf="@id/btnPlay"
            tools:src="@drawable/ic_repeat_black_24dp"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:minLines="1"
            android:ellipsize="end"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            app:text="@{model.title}"
            app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
            app:layout_constraintBottom_toTopOf="@+id/textArtistAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Text 1"
            tools:ignore="SelectableText"/>

        <TextView
            android:id="@+id/textArtistAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp"
            android:ellipsize="end"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            app:text="@{model.artistAndAlbum}"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintBottom_toTopOf="@id/btnPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Artist/Album"
            tools:ignore="SelectableText"/>

    </android.support.constraint.ConstraintLayout>

</layout>
